--- a/views/exit.ejs
+++ b/views/exit.ejs
@@ -6,10 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        * {
+            background-color: #1e232d;
+            text-align: center;
+            color: white;
+        }
+
+        h1 {
+            margin-top: 100px;
+        }
+        button{
+            background-color: blanchedalmond;
+            color: #1e232d;
+            margin-top: 200px;
+            padding: 10px;
+            font-size: 20px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>nikal gya successfully</h1>
+    <h1>You left the meeting</h1>
+    <button onclick="go()">make another meeting</button>
 </body>
-
+<script>
+    const go = ()=>{
+        window.location ='/';
+    }
+</script>
 </html>
