--- a/views/room.ejs
+++ b/views/room.ejs
@@ -22,8 +22,11 @@
     <script src="/socket.io/socket.io.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
     <script src="script.js" defer></script>
     <script src="script2.js" defer></script>
+    <script src="blur.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -41,6 +44,7 @@
         <button title="screenshare" id="screenshare" onclick="screenshare()"><i class="fas fa-desktop"></i></button>
         <button title="raisehand" id="raisehand" onclick="raisehand()"><i class="fas fa-hand-paper"></i></button>
         <button title="speak for command" id="X">speak to AI</button>
+        <button title="blur" id="blur" onclick="bluri()">blur</button>
     </div>
 
     <div class="messaging">
