--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -15,6 +15,13 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="/chatscript.js" defer></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-firestore.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+                     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
     <link rel="stylesheet" href="/chatstyle.css">
 </head>
 
@@ -32,6 +39,23 @@
     </div>
     <button onclick="test()">start video call</button>
     <button onclick="phatu()">leave meeting</button>
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyA1Np2SQDp_VkUGEswSNVW_Leln1ijTFR0",
+            authDomain: "engage-21.firebaseapp.com",
+            projectId: "engage-21",
+            storageBucket: "engage-21.appspot.com",
+            messagingSenderId: "224559810186",
+            appId: "1:224559810186:web:44603abed3e3124b0e4f73",
+            measurementId: "G-1DGGM41SNN"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+        const db = firebase.firestore();
+        db.settings({ timestampsInSnapshots: true });
+    </script>
 </body>
-
 </html>
