--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@ body {
   background: linear-gradient(to bottom right, #1b2127, #191e25);
   height: 100vh;
 }
+/* scroll bar */
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -18,6 +19,7 @@ body {
   background: rgb(168, 165, 165);
   border-radius: 10px;
 }
+/* video and video grid and name*/
 #video-grid {
   display: flex;
   justify-content: space-around;
@@ -64,6 +66,7 @@ video {
   left: 20vw;
   z-index: 100;
 }
+/* chatbox */
 .messaging {
   position: absolute;
   bottom: 10px;
@@ -109,6 +112,7 @@ video {
   border-radius: 8px 8px 8px 0px;
   margin: 5px;
 }
+/* buttons */
 button {
   background-color: #1e232d;
   border: none;
@@ -172,6 +176,8 @@ button {
   position: relative;
   bottom: -40px;
 }
+
+/* notifications */
 .handnotification {
   display: none;
   color: black;
@@ -183,6 +189,7 @@ button {
   padding: 5px;
   border-radius: 4px;
 }
+/* participant box */
 .participants {
   position: absolute;
   height: 100vh;
@@ -209,7 +216,7 @@ button {
   border-radius: 10px;
   margin-bottom: 5px;
 }
-
+/* bot suggestion box */
 #suggestion {
   position: absolute;
   width: 100px;
@@ -218,6 +225,7 @@ button {
   color: black;
   background-color: yellow;
 }
+/* blured video */
 #bluredvideo {
   position: absolute;
   top: 0px;
