--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>chat</title>
     <script>
         const chatroomid = "<%= chatroomid %>";
     </script>
+    <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    <!-- bootstrap -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="/socket.io/socket.io.js" defer></script>
-    <script src="/chatscript.js" defer></script>
+    <!-- socket.io -->
+        <script src="/socket.io/socket.io.js" defer></script>
+    <!-- mymade js -->
+        <script src="/chatscript.js" defer></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-firestore.js"></script>
@@ -26,7 +30,7 @@
 </head>
 
 <body>
-    <h1>chat</h1>
+    <h1>Chat</h1>
     <div id="message-container">
         <div class="show_message">
         </div>
@@ -38,7 +42,10 @@
     <div id="output">
     </div>
     <button onclick="test()">start video call</button>
-    <button onclick="phatu()">leave meeting</button>
+    <button onclick="leave()">leave meeting</button>
+    
+
+    <!-- database scripts -->
     <script>
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
@@ -58,5 +65,4 @@
         db.settings({ timestampsInSnapshots: true });
     </script>
 </body>
-
 </html>
