--- a/views/room.ejs
+++ b/views/room.ejs
@@ -8,22 +8,29 @@
     <script>
         const ROOM_ID = "<%= ROOM_ID %>"
     </script>
+    <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    <!-- bootstrap -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+    <!-- peerjs -->
+        <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-    <script src="/socket.io/socket.io.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <!-- socket.io -->
+        <script src="/socket.io/socket.io.js" defer></script>
+    <!-- CSS -->
+        <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+    <!-- tensorflow and bodypix -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
+    <!-- my written js -->
     <script src="script.js" defer></script>
     <script src="script2.js" defer></script>
     <script src="blur.js" defer></script>
@@ -31,9 +38,11 @@
 </head>
 
 <body>
+    <!-- contains video -->
     <div id="video-grid">
     </div>
     <!-- <button onclick="send()">click me</button> -->
+    <!-- buttons  -->
     <div class="buttons">
         <button title="mute/unmute" id="muteunmute" onclick="muteUnmute()"><i class="fas fa-microphone"></i></button>
         <button title="stop/start video" id="playstop" onclick="playStop()"><i class="fas fa-video"></i></button>
@@ -43,10 +52,11 @@
                 class="fas fa-user-friends"></i></button>
         <button title="screenshare" id="screenshare" onclick="screenshare()"><i class="fas fa-desktop"></i></button>
         <button title="raisehand" id="raisehand" onclick="raisehand()"><i class="fas fa-hand-paper"></i></button>
-        <button title="speak for command" id="X">speak to AI</button>
+        <button title="speak for command" id="X">speak to BOT</button>
         <button title="blur" id="blur" onclick="bluri()">blur</button>
     </div>
-
+    
+<!-- chatbox -->
     <div class="messaging">
         <div class="show_message">
         </div>
