--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,12 +14,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- bootstrap -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- socket.io -->
-        <script src="/socket.io/socket.io.js" defer></script>
+    <script src="/socket.io/socket.io.js" defer></script>
     <!-- mymade js -->
-        <script src="/chatscript.js" defer></script>
+    <script src="/chatscript.js" defer></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-firestore.js"></script>
@@ -43,7 +44,7 @@
     </div>
     <button onclick="test()">start video call</button>
     <button onclick="leave()">leave meeting</button>
-    
+
 
     <!-- database scripts -->
     <script>
@@ -65,4 +66,5 @@
         db.settings({ timestampsInSnapshots: true });
     </script>
 </body>
+
 </html>
